examples/test/testpolicy15258.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15258
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key31: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key19: value35
          key26: value8
      podSelector:
        matchLabels:
          key12: value4
          key30: value20
          key5: value35
